// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Menu with Options 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 1
    </button>
  </li>
  <li
    className=""
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 2
    </button>
  </li>
</ul>
`;

exports[`Default Menu with separator items 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 1
    </button>
  </li>
  <li
    className="ola_menu-separator"
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 2
    </button>
  </li>
  <li
    className=""
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 3
    </button>
  </li>
  <li
    className="ola_menu-separator"
  >
    <button
      className="ola_menu-option is-medium"
    >
      Option 4
    </button>
  </li>
</ul>
`;

exports[`Options are links 1`] = `
<ul
  className="ola_menu"
>
  <li
    className=""
  >
    <a
      className="ola_menu-option is-medium"
      href="link1"
    >
      Option 1
    </a>
  </li>
  <li
    className=""
  >
    <a
      className="ola_menu-option is-medium"
      href="link2"
    >
      Option 2
    </a>
  </li>
</ul>
`;
